sdk_tests/tests/pbc_contract_codegen/fail/zk/missing_zk_init_arg_for_zk_on_secret_input.stderr
error[E0412]: cannot find type `Sbi32` in this scope
  --> tests/pbc_contract_codegen/fail/zk/missing_zk_init_arg_for_zk_on_secret_input.rs:19:46
   |
19 |     pbc_contract_common::zk::ZkInputDef<u64, Sbi32>,
   |                                              ^^^^^ not found in this scope
   |
help: consider importing this type alias
   |
1  + use pbc_zk::Sbi32;
   |
